# SD-dMFA_v2

./: AGENTS.md  Makefile  pyproject.toml  requirements.txt
configs/: assumptions.yml
data/exogenous/: byproduct_primary_production_kt_per_yr.md  capacity_stage_observed_kt_per_yr.csv  capacity_stage_observed_kt_per_yr.md  end_use_detail_share_frac.md  gas_to_use_observed_kt_per_yr.csv  gas_to_use_observed_kt_per_yr.md  in_use_stock_observed_kt.csv  in_use_stock_observed_kt.md  lifetime_lognormal_mu.csv  lifetime_lognormal_mu.md  lifetime_lognormal_sigma.csv  lifetime_lognormal_sigma.md  lifetime_max_years.md  lifetime_mean_years.csv  lifetime_mean_years.md  lifetime_min_years.md  nonsubstitutability_j_0_1.csv  nonsubstitutability_j_0_1.md  od_preference_weight_0_1.csv  od_preference_weight_0_1.md  ore_mined_kt_per_yr.md  reserves_kt.md  resources_kt.md  trade_factor_i_ge_1.md  use_share_j_frac.md  wgi_norm_i_0_1.md
docs/: ASSUMPTIONS.md  ASSUMPTIONS_TO_CONFIRM.md  CHANGELOG.md  DECISION_LOG.md  EXOGENOUS_BASELINE_PROVENANCE.md  RISKS.md  TASK_BOARD.md  WORKFLOW_VISUALS.md
docs/diagrams/: coupled_full_chain_scope.mmd  (+2 more)
notebooks/: 00_Quickstart.ipynb  01_Config_Explorer.ipynb  02_Exogenous_Data_Healthcheck.ipynb  03_Stock_and_GAS_Inspector.ipynb  04_OD_Trade_Matrix_Viewer.ipynb  05_Capacity_Ceiling_Smoothing.ipynb  06_Indicators_Viewer.ipynb  README.md
outputs/: README.md
registry/: variable_registry.yml
scripts/: derive_lognormal_lifetimes.py  generate_mermaid_workflow.py  plot_baseline_vs_scenarios.py  validate_consistency.py  validate_exogenous_inputs.py
(+758 files in other folders)
